--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@popperjs/core": "^2.11.8",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.7",
+    "express": "^4.21.2",
     "jquery": "^3.7.1",
+    "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
