--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "jquery": "^3.7.1",
+    "mongoose": "^7.8.6",
+    "mongoose-unique-validator": "^4.0.1",
     "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,6 +44,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "nodemon": "^3.1.9",
     "typescript": "~5.6.2"
   }
 }
